# Rum

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
CMake/: FindEnTT.cmake  FindGLAD.cmake  FindGLFW.cmake  FindGLM.cmake  FindSFML.cmake  FindSTB.cmake  FindSpdlog.cmake  PlatformConfig.cmake
Dependencies/: CMakeLists.txt
Dependencies/Catch2/: CMakeLists.txt
Dependencies/GLAD/include/glad/: glad.h
Dependencies/GLAD/src/: glad.c
Dependencies/GLFW/Clang-VS2019-x86_64/Debug/lib/: glfw3.lib
Dependencies/GLFW/Clang-VS2019-x86_64/Release/lib/: glfw3.lib
Dependencies/SFML/lib/: sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
Dependencies/SFML/lib/cmake/SFML/: SFMLStaticTargets.cmake
Dependencies/STB/include/stb/: stb_image.h
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Window.cpp  Window.hpp
Engine/Events/: CMakeLists.txt  Event.hpp  KeyEvent.hpp  WindowEvent.hpp
Examples/: CMakeLists.txt
Examples/BasicRectangle/: CMakeLists.txt  main.cpp  main_future.cpp
Examples/BasicTriangle/: CMakeLists.txt  main.cpp
Rum/: CMakeLists.txt  Rum.hpp
Rum/Core/: Application.cpp  Application.hpp  Assert.hpp  CMakeLists.txt  Input.cpp  Input.hpp  KeyCodes.hpp  Log.cpp  Log.hpp  MouseCodes.hpp  RObject.hpp  Types.hpp  Window.cpp  Window.hpp
Rum/Events/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Rum/Platform/: CMakeLists.txt
Rum/Platform/GLFW/: Utility.cpp  Utility.hpp
Rum/Platform/OpenGL/: OpenGLBuffers.cpp  OpenGLBuffers.hpp  OpenGLContext.cpp  OpenGLRendererApi.cpp  OpenGLRendererApi.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture2D.cpp  OpenGLTexture2D.hpp  OpenGLUniformBuffer.hpp  OpenGLUtilities.cpp  OpenGLUtilities.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp  OpenGlContext.cpp  OpenGlContext.hpp  OpenGlRendererApi.cpp  OpenGlRendererApi.hpp  OpenGlShader.cpp  OpenGlShader.hpp
Rum/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
Rum/Renderer/: Buffers.cpp  Buffers.hpp  CMakeLists.txt  Camera.hpp  DrawContext.cpp  DrawContext.hpp  FreeRoamCamera.cpp  FreeRoamCamera.hpp  Renderer.cpp  Renderer.hpp  Renderer3D.cpp  Renderer3D.hpp  RendererApi.cpp  RendererApi.hpp  RendererBase.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp
Rum/Renderer/Objects/: Cube.cpp  Cube.hpp
Rum/Scene/: CMakeLists.txt  Components.hpp  Entity.cpp  Entity.hpp  RObject.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
UnitTests/: CMakeLists.txt  main.cpp
UnitTests/Core/: AssertTests.cpp  main.cpp
UnitTests/Input/: WindowInputTests.cpp
UnitTests/Rendering/: BufferTests.cpp  ShaderTest.cpp  main.cpp
UnitTests/Scene/: EntityTests.cpp
UnitTests/Window/: WindowTests.cpp
